--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -29,7 +29,8 @@ section.course-info {
                     .make-md-column(4);
                     .make-lg-column(4);
 
-                    padding: 0;
+                    margin: 0;
+                    padding: 15px 15px 15px 0;
                     display: block;
 
                     .hero {
