--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -53,6 +53,7 @@ p a, p a:link, p a:visited {
     outline: none;
 
     &:hover, &:focus, &:active {
+        color: @color-primary;
         border: 0 none;
         outline: none;
     }
