--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -61,6 +61,7 @@ body,
     @import 'course/main.less';
 
     @import 'static.less';
+    @import 'error.less';
 
     @import 'homepage.less';
     @import 'courses.less';
