Fix error title color

--- a/static/less/pages/error.less
+++ b/static/less/pages/error.less
@@ -4,6 +4,7 @@
     margin-top: @layout-top-spacing;
 
     h1 {
+        color: inherit;
         font: inherit;
         font-size: @font-size-h1;
         text-transform: none;
