Style error messages on password reset form

--- a/static/less/pages/password-reset.less
+++ b/static/less/pages/password-reset.less
@@ -51,6 +51,10 @@
         form {
             .status {
                 .ionisx-alert();
+
+                &.submission-error {
+                    .ionisx-alert-error();
+                }
             }
 
             .list-input {
