--- a/static/less/pages/static.less
+++ b/static/less/pages/static.less
@@ -15,6 +15,8 @@
     }
 
     ol, ul {
+        list-style-position: inside;
+
         li {
             font: inherit;
             color: inherit;
