--- a/static/less/mixins/modal.less
+++ b/static/less/mixins/modal.less
@@ -15,7 +15,7 @@
     // Ugly things go here:
 
     top: 1.5 * @layout-header-height !important;
-    position: fixed !important;
+    position: absolute !important;
     left: 0 !important;
     margin-left: auto !important;
 
