Style account activation page
Fix #18

--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -70,4 +70,5 @@ body,
     @import 'register.less';
     @import 'login.less';
     @import 'password-reset.less';
+    @import 'activation.less';
 }
