--- a/static/less/pages/course/forum.less
+++ b/static/less/pages/course/forum.less
@@ -56,12 +56,14 @@
                     margin-top: 1em;
                 }
 
-                ul.new-post-form-errors {
-                    .ionisx-alert();
-                    .ionisx-alert-body();
+                .new-post-form-errors {
                     .ionisx-alert-error();
 
-                    margin-bottom: 1em;
+                    li {
+                        background: none;
+                        border: 0 none;
+                        padding: 0;
+                    }
                 }
 
                 input[type=text],
