--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -3,6 +3,10 @@
 
     margin-top: @layout-top-spacing;
 
+    .dashboard-banner {
+        .ionisx-alert-warning();
+    }
+
     .profile-sidebar {
         .hidden-xs();
         .hidden-sm();
