--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -11,20 +11,24 @@ body {
 h1 {
     color: inherit;
     font-weight: 500;
+    -webkit-font-smoothing: auto;
 }
 
 h2 {
     color: @color-primary;
     text-transform: none;
+    -webkit-font-smoothing: auto;
 }
 
 h3 {
     color: inherit;
+    -webkit-font-smoothing: auto;
 }
 
 h4 {
     color: @color-primary;
     font-weight: 500;
+    -webkit-font-smoothing: auto;
 }
 
 p {
@@ -62,6 +66,10 @@ p a, p a:link, p a:visited {
 label {
     color: inherit;
     font: inherit;
+}
+
+b, strong {
+    font-weight: 600;
 }
 
 span {
