Fix link style in alerts

--- a/static/less/mixins/alert.less
+++ b/static/less/mixins/alert.less
@@ -26,6 +26,11 @@
         }
     }
 
+    a {
+        color: inherit;
+        text-decoration: underline;
+    }
+
     &.alert-warning {
         background-color: lighten(@color-warning, 5%);
         color: lighten(@color-warning, 60%);
