Make forum responsive and pretty

--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -43,7 +43,13 @@ p {
     }
 }
 
-ul {
+blockquote {
+    font: inherit;
+    color: inherit;
+    border-color: @color-border;
+}
+
+ul, ol {
     font: inherit;
     color: inherit;
     list-style-position: inside;
