Normalize static pages style

--- a/static/less/pages/course/main.less
+++ b/static/less/pages/course/main.less
@@ -116,6 +116,7 @@
     }
 
     @import 'courseware.less';
+    @import 'pages.less';
     @import 'info.less';
     @import 'wiki.less';
     @import 'progression.less';
