Fix inactive course style on dashboard

--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -234,7 +234,7 @@
                         h3 {
                             margin-top: 0;
 
-                            a {
+                            a, span {
                                 font: inherit;
                             }
                         }
