Remove margin only for even div elements
Fix #28.

--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -139,7 +139,7 @@
                     display: inline-block;
                     vertical-align: top;
 
-                    &:nth-child(even) {
+                    &:nth-of-type(even) {
                         margin-right: 0;
                     }
                 }
