Remove HTML entities from strings
Reference edx/edx-platform#4576

--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -40,7 +40,7 @@
       </ul>
     </nav>
     <div>
-      <p class="copyright">${_("&copy; 2014 {platform_name}, some rights reserved.").format(platform_name=platform_name())}</p>
+      <p class="copyright">${_(u"© 2014 {platform_name}, some rights reserved.").format(platform_name=platform_name())}</p>
     </div>
     <div class="by-ionisx">
       <a href="https://ionisx.com">
