Hide register button

--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -85,6 +85,10 @@ header.global, header.global-new, header.global.slim {
                     color: @white;
                     text-decoration: underline;
                 }
+
+                &.cta-register {
+                    display: none;
+                }
             }
         }
 
